Fix broken style of timeline preview in about page

--- a/app/javascript/styles/theme-base/about.scss
+++ b/app/javascript/styles/theme-base/about.scss
@@ -1,17 +1,15 @@
 .landing-page {
-  .features {
-    #mastodon-timeline {
-      color: $text-color;
-      box-shadow: 0 0 6px rgba($black, 0.1);
-      .column-header {
-        color: $accent-text-color;
-      }
+  #mastodon-timeline {
+    color: $text-color;
+    box-shadow: 0 0 6px rgba($black, 0.1);
+    .column-header {
+      color: $accent-text-color;
+    }
 
-      p {
-        color: $text-color;
-        a {
-          color: $ui-highlight-color;
-        }
+    p {
+      color: $text-color;
+      a {
+        color: $ui-highlight-color;
       }
     }
   }
